new content view

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Xcode
 .DS_Store
 *.xcodeproj
@@ -15,9 +14,7 @@ Pods/
 Carthage/Build/
 
 # API Keys (CRITICAL: DO NOT COMMIT YOUR API KEY)
-# This line is a placeholder. Your actual API key will be in ContentView.swift
-# but we will ensure it's not committed by using a placeholder value.
-# If you were to externalize it to a separate file, you'd list that file here.
+Secrets.plist
 
 # Logs
 *.log
